Import of LICHTKIND/kephra-0.3.6_11 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.6_11
gitpan-cpan-path:         LICHTKIND/kephra-0.3.6_11.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ TODO 0.4:
  + own statusbar
  + config dialog
 
+0.3.6.11
+ ] updated tests to ned app name
+
 0.3.6.10
  + autonotify Dialog
  ] saner file open syntax
