--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ TODO 0.4:
  + own statusbar
  + config dialog
 
+0.3.6.12
+ ! fix naming convention in CPAN distro
+
 0.3.6.11
  ] updated tests to ned app name
 
