--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    Kephra - crossplatform, CPAN-installable GUI-Texteditor for Programmers,
+    kephra - crossplatform, CPAN-installable GUI-Texteditor for Programmers,
              UI designed along Perl's Paradigms 
 
 SYNOPSIS
