--- a/Changes
+++ b/Changes
@@ -7,6 +7,11 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.9.2
+ + reintroduce fast splashscreen
+ ~ splashscreen img and app icon now as xpm too
+ ] shrinking strawberry distro from 28 to 23MB
+
 0.3.9.1
  ' POD fix
  ! toolbar appeared in wrong status bar cell
