Import of LICHTKIND/Kephra-0.3.9.8 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9.8
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9.8.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,6 +7,16 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.9.8
+ ' extending Kephra.pm's POD
+ ] making DragAcceptFiles optional because not supported by GTK
+ 
+0.3.9.7
+ ! seperator in Config::Embedded
+ ] renamed Config::Embedded -> Config::Defaults
+ ] rename pre dir into kre (kephra runtime environment)
+ ] externalized into single files
+
 0.3.9.6
  ] complete new starter
  ] new Kephra::Config::init() method
@@ -962,21 +972,6 @@ TODO 0.4:
 0.0.17: new file, open & save as
 0.0.15: First Public Release!: shows the editbox!
 
-PRE
-0.3. 2: Perl 5.8.8, wxPerl 0.26
-0.3   : Perl 5.8.7, General::Config 0.30
-0.2.00: Perl 5.8.6, libs added, General::Config patched, better starter
-0.1.80: wxPerl 0.21, cpan: Hash::Merge, Clone.pm added
-0.1.60: simplifications
-0.1.55: Perl 5.8.4, Config::General 2.27
-0.1.50: Perl 5.8.3, wxPerl 0.19, Config::General 2.26, more standart libs
-0.1.01: wxPerl 0.18, more libs, simplifications
-0.1.00: Perl 5.6.1, wxPerl 0.17, some standart libs
-
-
-the VERSION number is like a date in the development timeline of the program,
-no matter which part, a bigger number comes always after a smaller, pce 0.2
-comes after pre 0.1.23
 
 Legend:
  " purpose
