Import of LICHTKIND/Kephra-0.3.9.10 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9.10
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9.10.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,7 +7,14 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.9.10
+ ] Gabor: added first logging functions
+ ] renamed Config::Default::Global_Settings to Config::Default::GlobalSettings
+ ! mismatch in 2 other Default modules names
+
 0.3.9.9
+ ' documented API modules
+ ' repaired some POD in main module
  [ fixed tabbar icon tooltip texts
  ] switched from YAML to YAML::Tiny (less code, less memory, all we need)
  ] new starter.exe that starts kre\wperl.exe
