--- a/Changes
+++ b/Changes
@@ -7,9 +7,28 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.9.14
+
+0.3.9.13
++ added View Panel Menu
++ 2 entry for Notepad and Output
+~ renamed Module API to Panel
+[ basic visuals for output panel
+
+0.3.9.12
+ [ + goto line icon
+ ~ switched to Config::General 2.4 in windistro 
+ ! fixed about dialog
+
+0.3.9.11
+ ! restore curser pos in current file after restart
+ ~ added __WARN__ and __DIE__ to perl lexer
+ ! wordchar settings where missing
+
 0.3.9.10
  ] Gabor: added first logging functions
  ] renamed Config::Default::Global_Settings to Config::Default::GlobalSettings
+ ! Gabor: optimized config file type recogition
  ! mismatch in 2 other Default modules names
 
 0.3.9.9
