--- a/Changes
+++ b/Changes
@@ -7,13 +7,17 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.9.15
+ * output panel works now
+
 0.3.9.14
+ ] internal file namespace cleanup
 
 0.3.9.13
-+ added View Panel Menu
-+ 2 entry for Notepad and Output
-~ renamed Module API to Panel
-[ basic visuals for output panel
+ + added View Panel Menu
+ + 2 entry for Notepad and Output
+ ~ renamed Module API to Panel
+ [ basic visuals for output panel
 
 0.3.9.12
  [ + goto line icon
