Import of LICHTKIND/Kephra-0.3.10.1 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.1
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.1.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,8 +7,14 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.10.1
+ [ changed panel layout: column division first
+ ' POD fix for Panel API
+ ! workaround for a Wx bug
+
 0.3.10
  ! add missing panel localisation
+ ! resized output panel when started closed
 
 0.3.9.18
  + Output is resizable ans remembers its size
