Import of LICHTKIND/Kephra-0.3.10_2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_2
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -7,6 +7,11 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.10.2
+ ! fixed codepage setting
+ ! fixed wordchar settings
+ ! fixed and moved dev.pl outside the distro
+
 0.3.10.1
  [ changed panel layout: column division first
  ' POD fix for Panel API
