Import of LICHTKIND/Kephra-0.3.10_3 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_3
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_3.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -7,6 +7,10 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.10.3
+ ! caret visible on app start
+ ! tried to load non existing notepad cache
+
 0.3.10.2
  ! fixed codepage setting
  ! fixed wordchar settings
