Import of LICHTKIND/Kephra-0.3.10.4 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.4
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.4.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,7 +7,12 @@ TODO 0.4:
  + keymap dialog
  + own statusbar
 
+0.3.10.4
+ ' rewritten parts of Kephra.pm POD
+ ! fix install problem hopefully
+
 0.3.10.3
+ ] Keymap Dialog had no Version number
  ! caret visible on app start
  ! tried to load non existing notepad cache
 
