Import of LICHTKIND/Kephra-0.3.10_6 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_6
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_6.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,11 +1,25 @@
 BUGS:
  !!! makefile.pl fails
  ! textchanged event triggers twice
+ ! file change reminder on deleted files
 
 TODO 0.4:
  * config dialog
  + keymap dialog
  + own statusbar
+
+0.3.10.6
+ + 3 close unsaved functions
+ ' extend Kephra.pm POD
+ [ save notepad with when resize
+ [ rearrange file menu
+
+0.3.10.5
+ ] copy configs unto userconfig when configs are old
+ ] current filepath is known to interpreter when run script
+ ! copied config files where readonly
+ ! could not write autosaved file sessions when no file was there
+ ! changed_notify_check could not handle deleted files
 
 0.3.10.4
  ' rewritten parts of Kephra.pm POD
