Import of LICHTKIND/Kephra-0.3.10.11 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.11
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.11.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,6 +6,16 @@ TODO 0.4:
  * config dialog
  * syntaxmodes
 
+0.3.10.12
+ 
+
+0.3.10.11
+ + exit without save
+ ] rewritten parts of Edit::Goto.pm
+ ] made localisation configs saner
+ ! goto line dialog showed 1 line less than current
+ ! fixing default localisation
+
 0.3.10.10
  ] founding Kephra::Log
  ] adapt makefile becaue no longer need Log::Dispatch
