Import of LICHTKIND/Kephra-0.3.10.12 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.12
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.12.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,7 +7,10 @@ TODO 0.4:
  * syntaxmodes
 
 0.3.10.12
- 
+ [ search finding better visible
+ ! safer conf file parser init
+ ! didn't remember changed syntaxstyle of opened file
+ ! proper file dialog filter for config files
 
 0.3.10.11
  + exit without save
