Import of LICHTKIND/Kephra-0.3.10_16 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_16
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_16.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -6,6 +6,12 @@ TODO 0.4:
  * config dialog
  * syntaxmodes
 
+0.3.10.16
+ ] sane doc nr validation
+ ! false trigger of file changed notify dialog
+ ! wrong win titel when open file
+ ! fix default global settings hash
+
 0.3.10.15
  ! output panel can run scripts again
 
