Import of LICHTKIND/Kephra-0.3.10_18 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_18
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_18.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -6,6 +6,16 @@ TODO 0.4:
  * config dialog
  * syntaxmodes
 
+0.3.10.18
+ ! 0 div in indent guid highlighting
+ ! restore doc attribute from doc nr 0 correctly
+ ! umlaut problem no longer
+ ! clean up all lexer words
+
+0.3.10.17
+ ] massive refactoring of Kephra::Document namespace
+ ! restart timer when canceled app shutdown
+
 0.3.10.16
  ] sane doc nr validation
  ! false trigger of file changed notify dialog
