--- a/Changes
+++ b/Changes
@@ -1,10 +1,19 @@
 BUGS:
  !!! makefile.pl fails
+ !!! test suite fails
  ! textchanged event triggers twice
 
-TODO 0.4:
- * config dialog
- * syntaxmodes
+0.3.10.23
+ ~ hide config dialog
+ ' update docs
+ ! change doc
+
+0.3.10.22
+ ! move tab right crashed
+
+0.3.10.21
+ ~ in searchbar input now works ctrl+
+ ! fixed Config::load_defaults
 
 0.3.10.20
  [ forward calls from doc to doc::Internal via glob
