Import of LICHTKIND/Kephra-0.3.10_24 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_24
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_24.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@ BUGS:
  !!! test suite fails
  ! textchanged event triggers twice
 
+0.3.10.24
+ ~ background color for brace highlighting
+ ' more docs translation
+ ! a Config::Global sub required a gone module
+ ! internal doc propert reset didn't delete file name
+ ! file > open > each_once works again
+
 0.3.10.23
  ~ hide config dialog
  ' update docs
