Import of LICHTKIND/Kephra-0.4.0_1 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.0_1
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.0_1.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,6 +3,15 @@ BUGS:
  !!! test suite fails
  ! textchanged event triggers twice
 
+
+0.4.0.1
+  ' updating key layout docs 
+  ! quting doc name in output panel eval
+  ! delete all bookmarks
+
+0.4 stable release
+ ' finished end user docs
+
 0.3.10.24
  ~ background color for brace highlighting
  ' more docs translation
