--- a/Changes
+++ b/Changes
@@ -4,6 +4,12 @@ BUGS:
  ! textchanged event triggers twice
 
 
+0.4.0.2
+  ' updating key layout docs 
+  ~ close all key binding changed <Alt>+<Q> => <Ctrl>+<Alt>+<Q>
+  ~ close app key binding changed <Alt>+<F4> => <Ctrl>+<Q>
+  ! UTF problems on files with syntaxmode none 
+
 0.4.0.1
   ' updating key layout docs 
   ! quting doc name in output panel eval
