Import of LICHTKIND/Kephra-0.4.1_15 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.1_15
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.1_15.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@ BUGS:
  !!! test suite fails
  ! textchanged event triggers twice
 
+0.4.1.15
+ ] 2 level tab number translation
+ ~ moved motto from info box into localisation
+ ~ visibility of tabbar can be set again
+ ! move tabs by mouse has no side effects
+ ! move tabs by keyboard works again
+
 0.4.1.14
  ' added doc/Roadmap file
  ~ doubleclick on panel splitter now reacts properly
