--- a/README
+++ b/README
@@ -84,9 +84,13 @@ SUPPORT
 AUTHORS
     * Herbert Breunung <lichtkind@cpan.org> (main author)
 
+    * Andreas Kaschner 
+    
     * Jens Neuwerk <jenne@gmxpro.net> (author of icons, GUI advisor)
 
     * Adam Kennedy <adamk@cpan.org> (cpanification)
+ 
+    * Gabor Szabo E<lt>szabgab@cpan.orgE<gt>
  
 COPYRIGHT
     This Copyright applies only to the "Kephra" Perl software distribution, not 
